@@ -372,6 +372,29 @@ function validate_stack() {
     fi
   fi
 
+  if [ "${HAS_ECS:-}" == "1" ]; then
+    if [[ $(is_kerberos_enabled) == "yes" ]] && [[ $(is_tls_enabled) == "yes" ]]; then
+      if [[ $USE_IPA == "no" ]]; then
+        echo "${C_RED}ERROR: ECS requires IPA to be enabled.${C_NORMAL}" > /dev/stderr 
+        errors=1
+      else
+        local stack_cm7_version=$(echo $CM_VERSION | sed 's/\.//g')
+        local stack_ecs_version=$(echo $ECS_VERSION | sed 's/\.//g')
+        if [[ $stack_ecs_version -ge 152 ]] && [[ $stack_cm7_version -lt 71132 ]]; then
+          echo "${C_RED}ERROR: ECS 1.5.2 requires Cloudera Manager version 7.11.3.2+.${C_NORMAL}" > /dev/stderr 
+          errors=1
+        fi
+        if [[ $TF_VAR_pvc_data_services == "false" ]]; then
+          echo "${C_RED}ERROR: ECS requires TF_VAR_pvc_data_services to be true.${C_NORMAL}" > /dev/stderr 
+          errors=1
+        fi       
+      fi
+    else
+      echo "${C_RED}ERROR: ECS requires TLS and Kerberos to be enabled.${C_NORMAL}" > /dev/stderr 
+      errors=1
+    fi
+  fi
+
   if [ "$errors" != "0" ]; then
     echo "${C_RED}ERROR: Please fix the errors above in the configuration file $stack_file and try again.${C_NORMAL}" > /dev/stderr
     exit 1
@@ -472,6 +495,10 @@ function install_ipa_client() {
 
   # Install IPA client package
   log_status "Installing IPA client packages"
+  # Enable idm client stream for RHLE 8
+  if [[ $(get_os_major_version) == "8" ]]; then
+    yum -y module install idm:DL1/client 
+  fi
   yum_install ipa-client openldap-clients krb5-workstation krb5-libs
 
   wait_for_ipa "$ipa_host"
@@ -483,9 +510,7 @@ function install_ipa_client() {
     --password="$THE_PWD" \
     --server="$IPA_HOST" \
     --realm="$KRB_REALM" \
-    --domain="$(hostname -f | sed 's/^[^.]*\.//')" \
-    --force-ntpd \
-    --ssh-trust-dns \
+    --domain="$(echo $IPA_HOST | sed 's/^[^.]*\.//')" \
     --all-ip-addresses \
     --ssh-trust-dns \
     --unattended \
@@ -508,6 +533,12 @@ enum_cache_timeout = 45/' /etc/sssd/sssd.conf
 
   # Adjust krb5.conf
   sed -i 's/udp_preference_limit.*/udp_preference_limit = 1/;/KEYRING/d' /etc/krb5.conf
+  # Adjust krb5.conf for HUE KTR renewer
+  sed -i '/udp_preference_limit = 1/a\  renew_lifetime = 7d' /etc/krb5.conf
+  # Adjust krb5.conf for rhel8/9 support of sha1 crypto
+  sed -i '/udp_preference_limit = 1/a\  allow_weak_crypto = true' /etc/krb5.conf
+  # Adjust krb5.conf.d - disable KCM credential cache
+  sed -e '/default_ccache_name/ s/^#*/#/' -i /etc/krb5.conf.d/kcm_default_ccache
 
   # Copy keytabs from IPA server
   rm -rf /tmp/keytabs
@@ -520,7 +551,8 @@ enum_cache_timeout = 45/' /etc/sssd/sssd.conf
   # Add IPA cert to Java's default truststore
   local java_home cacerts
   java_home=$(readlink -f "$(dirname "$(readlink -f "$(which java)")")/..")
-  cacerts=$(readlink -f "$(find "$java_home" -name cacerts)")
+  # compat with jdk11,jdk17
+  cacerts=$(readlink -f "$java_home/lib/security/cacerts")
   keytool -importcert -keystore "$cacerts" -storepass changeit -alias ipa-ca-cert -file /etc/ipa/ca.crt -noprompt
 }
 
@@ -749,6 +781,11 @@ function create_certs() {
     ALT_NAMES="DNS:${LOCAL_HOSTNAME},"
   fi
   export ALT_NAMES="${ALT_NAMES}DNS:$(hostname -f),DNS:*.${public_ip}.nip.io,DNS:*.cdsw.${public_ip}.nip.io"
+  # Add ECS SAN
+  if [[ ${HAS_ECS:-0} == 1 ]] && [[ $PUBLIC_DNS == ecs* ]]; then
+    ALT_NAMES="${ALT_NAMES},DNS:*.apps.${PUBLIC_DNS},DNS:edge2ai.apps.${PUBLIC_DNS},DNS:*.edge2ai.apps.${PUBLIC_DNS}"
+  fi
+  export ALT_NAMES
   openssl req\
     -new\
     -key ${KEY_PEM} \
@@ -792,6 +829,11 @@ EOF
     fi
     ipa host-add-principal $(hostname -f) "host/*.${public_ip}.nip.io"
     ipa host-add-principal $(hostname -f) "host/*.cdsw.${public_ip}.nip.io"
+    if [[ ${HAS_ECS:-0} == 1 ]] && [[ $PUBLIC_DNS == ecs* ]]; then
+      ipa host-add-principal $(hostname -f) "host/*.apps.${PUBLIC_DNS}"
+      ipa host-add-principal $(hostname -f) "host/edge2ai.apps.${PUBLIC_DNS}"
+      ipa host-add-principal $(hostname -f) "host/*.edge2ai.apps.${PUBLIC_DNS}"
+    fi
     ipa cert-request ${CSR_PEM} --principal=host/$(hostname -f)
     echo -e "-----BEGIN CERTIFICATE-----\n$(ipa host-find $(hostname -f) | grep Certificate: | tail -1 | awk '{print $NF}')\n-----END CERTIFICATE-----" | openssl x509 > ${HOST_PEM}
 
@@ -963,6 +1005,12 @@ function tighten_keystores_permissions() {
 
 function wait_for_cm() {
   echo "-- Wait for CM to be ready before proceeding"
+  # check if is_tls_enabled = "yes"
+  if [[ "${1:-no}" == "no" ]]; then
+    api_url='http://localhost:7180/api/version'
+  else
+    api_url='https://localhost:7183/api/version'
+  fi
   while true; do
     for pwd in admin ${THE_PWD}; do
       local result=$(
@@ -975,7 +1023,7 @@ function wait_for_cm() {
           --silent \
           --user "admin:${pwd}" \
           --write-out "%{http_code}" \
-          http://localhost:7180/api/version
+          "${api_url}"
       )
       if [[ $result == "200" ]]; then
         break 2
@@ -995,7 +1043,7 @@ function retry_if_needed() {
   while [[ $retries -ge 0 ]]; do
     reset_errexit=false
     if [[ -o errexit ]]; then
-      set +e
+    set +e
       reset_errexit=true
     fi
     eval "$cmd"
@@ -1042,7 +1090,7 @@ function get_service_urls() {
   load_stack $NAMESPACE $BASE_DIR/resources validate_only exclude_signed
   CLUSTER_HOST=dummy PRIVATE_IP=dummy PUBLIC_DNS=dummy DOCKER_DEVICE=dummy CDSW_DOMAIN=dummy \
   IPA_HOST="$([[ $USE_IPA == "yes" ]] && echo dummy || echo "")" \
-  CLUSTER_ID=dummy PEER_CLUSTER_ID=dummy PEER_PUBLIC_DNS=dummy \
+  CLUSTER_ID=dummy PEER_CLUSTER_ID=dummy PEER_PUBLIC_DNS=dummy ECS_PUBLIC_DNS=dummy \
   python $BASE_DIR/resources/cm_template.py --cdh-major-version $CDH_MAJOR_VERSION $CM_SERVICES > $tmp_template_file
 
   local cm_port=$([[ $ENABLE_TLS == "yes" ]] && echo 7183 || echo 7180)
@@ -1304,8 +1352,19 @@ function detect_docker_device() {
 }
 
 function enable_py3() {
-  export MANPATH=
-  source /opt/rh/rh-python38/enable
+  if [[ $(get_os_type) == "CENTOS" ]]; then
+    export MANPATH=
+    source /opt/rh/rh-python38/enable
+  else
+    if [[ $(get_os_major_version) == "8" ]];  then  
+      update-alternatives --set python /usr/bin/python3.8
+      update-alternatives --set python3 /usr/bin/python3.8
+      alternatives --install /usr/bin/pip pip /usr/bin/pip3.8 1
+      alternatives --install /usr/bin/pip3 pip3 /usr/bin/pip3.8 1
+    else
+      return 0
+    fi
+  fi
 }
 
 function get_public_ip() {
@@ -1332,9 +1391,10 @@ function deploy_os_prereqs() {
 
   log_status "Installing EPEL repo"
   yum erase -y epel-release || true; rm -f /etc/yum.repos.r/epel* || true
-  if [[ $(get_os_major_version) == "8" ]]; then
-    dnf config-manager --set-enabled powertools
-    dnf -y install epel-release epel-next-release
+  if [[ $(get_os_major_version) == "8" || $(get_os_major_version) == "9" ]]; then
+    # dnf config-manager --set-enabled powertools
+    # dnf -y install epel-release epel-next-release
+    dnf -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-$(get_os_major_version).noarch.rpm
   else
     # In July 2024 Centos 7 reached EoL and the repo was moved to the CentOS Vault.
     # The commands below update YUM repo file accordingly, if needed
@@ -1363,15 +1423,29 @@ function deploy_os_prereqs() {
   yum_install vim wget curl git bind-utils figlet cowsay jq rng-tools
   # For troubleshooting purposes, when needed
   yum_install sysstat strace iotop lsof
+  # Allow install on Rocky
+  add_rocky_support
 }
 
 function deploy_cluster_prereqs() {
   log_status "Installing cluster dependencies"
-  # Install RH python repo for CentOS
-  yum_install centos-release-scl
-  patch_yum_repos_for_centos
-  # Install dependencies
-  yum_install nodejs gcc-c++ make shellinabox mosquitto transmission-cli rh-python38 rh-python38-python-devel httpd
+  # Add missing packages
+  yum_install iptables firewalld net-tools krb5-devel
+  if [[ $(get_os_type) == "CENTOS" ]]; then
+    # Install RH python repo for CentOS
+    yum_install centos-release-scl
+    patch_yum_repos_for_centos
+    # Install dependencies
+    yum_install nodejs gcc-c++ make shellinabox mosquitto transmission-cli rh-python38 rh-python38-python-devel httpd
+  else
+    if [[ $(get_os_major_version) == "8" ]]; then
+      yum_install nodejs gcc-c++ make mosquitto transmission-cli python38 python38-devel httpd
+      yum_install 'https://kojipkgs.fedoraproject.org/packages/shellinabox/2.20/6.fc28/x86_64/shellinabox-2.20-6.fc28.x86_64.rpm'
+    else
+      yum_install nodejs gcc-c++ make mosquitto transmission-cli python3 python3-devel httpd compat-openssl11
+      yum_install 'https://kojipkgs.fedoraproject.org/packages/shellinabox/2.20/17.fc36/x86_64/shellinabox-2.20-17.fc36.x86_64.rpm'
+    fi
+  fi
   # Below is needed for secure clusters (required by Impyla)
   yum_install cyrus-sasl-md5 cyrus-sasl-plain cyrus-sasl-gssapi cyrus-sasl-devel
 }
@@ -1389,14 +1463,22 @@ function resolve_host_addresses() {
         export PUBLIC_DNS=${prefix}.${PUBLIC_IP}.nip.io
         ;;
     azure)
+        systemctl enable chronyd
+        systemctl restart chronyd
         export PRIVATE_DNS="$(cat /etc/hostname).$(grep search /etc/resolv.conf | awk '{print $2}')"
         export PRIVATE_IP=$(hostname -I | awk '{print $1}')
         export PUBLIC_DNS=${prefix}.${PUBLIC_IP}.nip.io
+        # Added to prevent DNS leak to nip.io
+        sed -i.bak -e "s/plugins = ifcfg-rh,/dns=none/g" /etc/NetworkManager/NetworkManager.conf 
+        systemctl restart NetworkManager
         ;;
     gcp)
+        echo "server 169.254.169.254 prefer iburst minpoll 4 maxpoll 4" >> /etc/chrony.conf
+        systemctl enable chronyd
+        systemctl restart chronyd
         export PRIVATE_DNS=$(curl -H "Metadata-Flavor: Google" http://169.254.169.254/computeMetadata/v1/instance/hostname)
         export PRIVATE_IP=$(curl -s -H "Metadata-Flavor: Google" http://169.254.169.254/computeMetadata/v1/instance/network-interfaces/0/ip)
-        export PUBLIC_DNS=$PRIVATE_DNS
+        export PUBLIC_DNS=${prefix}.${PUBLIC_IP}.nip.io
         ;;
     aliyun)
         export PRIVATE_DNS=$(curl -s http://100.100.100.200/latest/meta-data/hostname)
@@ -1430,6 +1512,9 @@ function complete_host_initialization() {
     cat /etc/workshop.conf >> /etc/profile
   fi
 
+  # Kerberos module support for jdk17
+  echo 'export JAVA_TOOL_OPTIONS="--add-exports=java.security.jgss/sun.security.krb5=ALL-UNNAMED"' >> /etc/profile
+  
   log_status "Ensuring there's plenty of entropy"
   systemctl enable rngd
   systemctl start rngd
@@ -1503,6 +1588,7 @@ function download_parcels() {
   mkdir -p /opt/cloudera/parcels
   # We want to execute ln -s within the parcels directory for preloading
   pushd "/opt/cloudera/parcels"
+  # Get parcels for el7 and el8
   while [ $# -gt 0 ]; do
     component=$1
     version=$2
@@ -1513,9 +1599,9 @@ function download_parcels() {
     manifest_url="$(check_for_presigned_url "${url%%/}/manifest.json")"
     paywall_curl "$manifest_url" "/tmp/manifest.json"
     # Find the parcel name for the specific component and version
-    parcel_name=$(jq -r '.parcels[] | select(.parcelName | contains("'"$version"'-el7.parcel")) | select(.components[] | .name == "'"$component"'").parcelName' /tmp/manifest.json)
+    parcel_name=$(jq -r '.parcels[] | select(.parcelName | contains("'"$version"'-el'"$(get_os_major_version)"'.parcel")) | select(.components[] | .name == "'"$component"'").parcelName' /tmp/manifest.json)
     # Create the hash file
-    hash=$(jq -r '.parcels[] | select(.parcelName | contains("'"$version"'-el7.parcel")) | select(.components[] | .name == "'"$component"'").hash' /tmp/manifest.json)
+    hash=$(jq -r '.parcels[] | select(.parcelName | contains("'"$version"'-el'"$(get_os_major_version)"'.parcel")) | select(.components[] | .name == "'"$component"'").hash' /tmp/manifest.json)
     echo "$hash" > "/opt/cloudera/parcel-repo/${parcel_name}.sha"
     if [[ ! -f "/opt/cloudera/parcel-repo/${parcel_name}" || $(sha1sum "/opt/cloudera/parcel-repo/${parcel_name}" 2> /dev/null || true) != "$hash" ]]; then
       # Download the parcel file - in the background
@@ -1661,8 +1747,15 @@ function install_ecs() {
   "${CURL[@]}" -X POST \
     "https://${CLUSTER_HOST}:7183/api/v51/clusters/${ECS_CLUSTER_NAME}/parcels/products/ECS/versions/${ECS_BUILD}/commands/activate"
   wait_for_parcel_state $ECS_CLUSTER_NAME ECS $ECS_BUILD DISTRIBUTED ACTIVATING ACTIVATED
+  
+  log_status "Prepare CM host for ECS certificates"
+  mkdir -p ${SEC_BASE}/ecs
+  ssh -tt -o StrictHostKeyChecking=no -i /home/${SSH_USER}/.ssh/${NAMESPACE}.pem ${SSH_USER}@${ECS_PRIVATE_IP} "sudo cp ${UNENCRYTED_KEY_PEM} ${HOST_PEM} /home/${SSH_USER}/.; sudo chown ${SSH_USER}:${SSH_USER} /home/${SSH_USER}/unencrypted-key.pem /home/${SSH_USER}/host.pem"
+  scp -o StrictHostKeyChecking=no -i /home/${SSH_USER}/.ssh/${NAMESPACE}.pem ${SSH_USER}@${ECS_PRIVATE_IP}:/home/${SSH_USER}/unencrypted-key.pem ${SEC_BASE}/ecs/unencrypted-key.pem 
+  scp -o StrictHostKeyChecking=no -i /home/${SSH_USER}/.ssh/${NAMESPACE}.pem ${SSH_USER}@${ECS_PRIVATE_IP}:/home/${SSH_USER}/host.pem ${SEC_BASE}/ecs/host.pem
+  chown -R cloudera-scm:cloudera-scm ${SEC_BASE}/ecs
 
-  log_status "Add ECS and Docker services to ECS cluster"
+  log_status "Add ECS and Docker services to ECS cluster (SSL)"
   local svc_json_file=${BASE_DIR}/ecs_svc.json
   cat > $svc_json_file <<EOF
 {
@@ -1674,7 +1767,7 @@ function install_ecs() {
         "items": [
           {
             "name": "defaultDataPath",
-            "value": "/docker"
+            "value": "/ecs/docker"
           }
         ]
       },
@@ -1741,6 +1834,34 @@ function install_ecs() {
             "name": "lsoDataPath",
             "value": "/ecs/local-storage",
             "sensitive": false
+          },
+          {
+            "name": "target_redundancy",
+            "value": 1
+          },
+          {
+            "name": "longhorn_replication",
+            "value": 1
+          },
+          {
+            "name": "internal_mirror",
+            "value": "true"
+          },
+          {
+            "name": "cluster_cidr",
+            "value": "172.42.0.0/16"
+          },
+          {
+            "name": "service_cidr",
+            "value": "172.43.0.0/16"
+          },
+          {
+            "name": "ssl_certificate",
+            "value": "${SEC_BASE}/ecs/host.pem"
+          },
+          {
+            "name": "ssl_private_key",
+            "value": "${SEC_BASE}/ecs/unencrypted-key.pem"
           }
         ]
       },
@@ -1773,19 +1894,45 @@ EOF
     "https://${CLUSTER_HOST}:7183/api/v51/clusters/${ECS_CLUSTER_NAME}/services" \
     -d @$svc_json_file
 
-  log_status "Initialize ECS"
+  log_status "Initialize ECS with values.yaml"
+
+  local root_ca_base64=$(base64 -w 0 $ROOT_PEM)
+  local values_yaml_file=${BASE_DIR}/values.yaml
+  cat > $values_yaml_file <<EOF
+ContainerInfo:
+  Mode: public
+  CopyDocker: false
+
+Database:
+  Mode: embedded
+  EmbeddedDbStorage: 20
+
+Vault:
+  Mode: embedded
+  EmbeddedStorage: 20
+
+OptionalCerts:
+  MiscCaCerts: "$root_ca_base64"
+
+Other:
+  truststoreJKS: ""
+  truststorePEM: ""
+  truststoreChecksum: ""
+EOF
+
+  local values_yaml=$(sed ':a;N;$!ba;s/\n/\\n/g' "$values_yaml_file" | sed 's/"/\\"/g')
   local ecs_json_file=${BASE_DIR}/ecs_install.json
   cat > $ecs_json_file <<EOF
 {
   "remoteRepoUrl": "${ECS_REPO}",
-  "valuesYaml": "ContainerInfo:\n  Mode: public\n  CopyDocker: false\nDatabase:\n  Mode: embedded\n  EmbeddedDbStorage: 200\nServices:\n  thunderheadenvironment:\n    Config:\n      database:\n        name: db-env\n  mlxcontrolplaneapp:\n    Config:\n      database:\n        name: db-mlx\n  dwx:\n    Config:\n      database:\n        name: db-dwx\n  cpxliftie:\n    Config:\n      database:\n        name: db-liftie\n  dex:\n    Config:\n      database:\n        name: db-dex\n  resourcepoolmanager:\n    Config:\n      database:\n        name: db-resourcepoolmanager\n  cdpcadence:\n    Config:\n      database:\n        name: db-cadence\n  cdpcadencevisibility:\n    Config:\n      database:\n        name: db-cadence-visibility\n  clusteraccessmanager:\n    Config:\n      database:\n        name: db-clusteraccessmanager\n  monitoringapp:\n    Config:\n      database:\n        name: db-alerts\n  thunderheadusermanagementprivate:\n    Config:\n      database:\n        name: db-ums\n  classicclusters:\n    Config:\n      database:\n        name: cm-registration\n  clusterproxy:\n    Config:\n      database:\n        name: cluster-proxy\nVault:\n  Mode: embedded\n",
+  "valuesYaml": "${values_yaml}",
   "containerizedClusterName": "${ECS_CLUSTER_NAME}",
   "experienceClusterName": "${ECS_CLUSTER_NAME}",
   "datalakeClusterName": "OneNodeCluster"
 }
 EOF
 
-  local ecs_call_log=/tmp/ecs-call.$(date +%s).log
+    local ecs_call_log=/tmp/ecs-call.$(date +%s).log
   "${CURL[@]}" -X POST \
     -H "Referer: https://${CLUSTER_HOST}:7183/cmf/express-wizard/wizard?allowResume=false&clusterType=EXPERIENCE_CLUSTER" \
     "https://${CLUSTER_HOST}:7183/api/v44/controlPlanes/commands/installEmbeddedControlPlane" \
@@ -1824,7 +1971,7 @@ function set_java_alternatives() {
 
   if [[ -n $java_home && -d $java_home ]]; then
     java_home=$(readlink -f ${java_home})
-    local link_dir=/usr/bin
+  local link_dir=/usr/bin
     local jre_bin_dir
     local jdk_bin_dir
     jdk_bin_dir=$(readlink -f "${java_home}/bin")
@@ -1907,4 +2054,340 @@ function patch_yum_repos_for_centos() {
     sed -i s/^#.*baseurl=http/baseurl=http/g /etc/yum.repos.d/*.repo
     sed -i s/^mirrorlist=http/#mirrorlist=http/g /etc/yum.repos.d/*.repo
   fi
+}
+# Add rocky support
+function add_rocky_support() {
+  lsb_dist="$(. /etc/os-release && echo "$ID")"
+  # Add support for Rocky Linux 8/9
+  if [[ $lsb_dist == "rocky" ]]; then
+    sed -i 's/Rocky Linux release/Red Hat Enterprise Linux release/' /etc/redhat-release
+    sed -i 's/ID="rocky"/ID="rhel"/' /etc/os-release
+  fi
+}
+
+function deploy_ecs_prereqs() {
+  log_status "Installing ECS dependencies"
+  yum_install iptables firewalld net-tools make
+  # Install dependencies on python38 for ECS 1.5.x
+  if [[ $(get_os_type) == "CENTOS" ]]; then
+    # Install RH python from CentOS
+    yum_install centos-release-scl
+    patch_yum_repos_for_centos
+    yum_install rh-python38 rh-python38-python-devel
+    # Enable python38 and add yaml
+    enable_py3
+    pip install --quiet --upgrade pip pyyaml
+    rm -f /usr/bin/python3 /usr/bin/pip3 /usr/local/bin/python3.8
+    ln -s /opt/rh/rh-python38/root/bin/python3 /usr/bin/python3
+    ln -s /opt/rh/rh-python38/root/bin/pip3 /usr/bin/pip3
+    ln -s /opt/rh/rh-python38/root/usr/bin/python3.8 /usr/local/bin/python3.8
+  else
+    # Install python from RHEL repo
+    if [[ $(get_os_major_version) == "8" ]]; then
+      yum_install python38 python38-devel
+    else
+      yum_install python3 python3-devel
+    fi
+    enable_py3
+    pip install --quiet --upgrade pip pyyaml
+  fi
+}
+
+function map_ipa_users() {
+  log_status "Configure LDAP/PAM Groups on CDP-BASE"
+  CURL=(curl -s -u "admin:${THE_PWD}" -H "accept: application/json" -H "Content-Type: application/json")
+  "${CURL[@]}" -X POST \
+    "https://${CLUSTER_HOST}:7183/api/v30/externalUserMappings" \
+    -d '{"items":[{"name":"cdp-admins","type":"LDAP","authRoles":[{"name":"ROLE_ADMIN"}]},{"name":"cdp-users","type":"LDAP","authRoles":[{"name":"ROLE_CLUSTER_ADMIN"}]}]}'
+
+  log_status "Patch gen_credentials_ipa.sh for IPA support to ECS"
+  # Preparing the script before provisioning ECS
+  local ipa_patch_file=/tmp/ipa_patch_file.$$
+  cat > $ipa_patch_file <<EOF
+  # ipa host-add patch for k8s
+  if [[ \$HOST =~ \. ]]; then
+    ipa host-add \$HOST  --force --no-reverse
+  else
+    ipa host-add \$HOST.svc.cluster.local  --force --no-reverse
+  fi
+EOF
+  local search_string='  ipa host-add $HOST --force --no-reverse'
+  sed -i.bak -e '/'"$search_string"'/r '"$ipa_patch_file"'' -e '/'"$search_string"'/d' /opt/cloudera/cm/bin/gen_credentials_ipa.sh
+}
+
+# Add install_cml function
+
+function install_cml() {
+  
+  local ENDPOINT_HOST="${1}"
+  local ENABLE_MLREG=${2:-1}
+  local KUBE_CONFIG="${3:-}"
+  local KUBE_DOMAIN="${4:-}"
+  local EXTERNAL_NFS=${5:-0}
+
+  log_status "Install CML on $ENDPOINT_HOST"
+
+  local ECS_BASE_URL="https://console-cdp.apps.$ENDPOINT_HOST"
+  local ROOT_CA=/opt/cloudera/security/x509/truststore.pem
+  local COOKIE_FILE=${BASE_DIR}/cookie.txt.$$
+  local LDAP_JSON=${BASE_DIR}/ldap.json.$$
+  local VALIDATE_JSON=${BASE_DIR}/validate.json.$$
+  local ECS_ENV_JSON=${BASE_DIR}/env.json.$$
+  local ECS_CML_JSON=${BASE_DIR}/cml.json.$$
+
+  log_status "Configure LDAP and groups on ECS-CP"
+  local CDP_ACCOUNT_ID=$(curl -v -k --retry 3 $ECS_BASE_URL/authenticate/login/local 2>&1 | grep "location:" | sed 's/.*accountId=//;s/&.*//')
+  # Get a session token
+  curl -k -X POST -c $COOKIE_FILE -d "username=admin&password=admin" "$ECS_BASE_URL/authenticate/callback/local?accountId=$CDP_ACCOUNT_ID&state=$ECS_BASE_URL" >/dev/null 2>&1
+  # Get LDAP
+  curl -k -X POST -b $COOKIE_FILE -H "Content-Type: application/json" -d '{"ldapProviderName": "cm-ldap"}' -o $LDAP_JSON $ECS_BASE_URL/api/v1/iam/describeLdapProvider >/dev/null 2>&1
+  # Add Groups
+  curl -k -X POST -b $COOKIE_FILE -H "Content-Type: application/json" -d '{"groupName": "cdp-admins", "syncMembershipOnUserLogin": true}' $ECS_BASE_URL/api/v1/iam/createGroup >/dev/null 2>&1
+  curl -k -X POST -b $COOKIE_FILE -H "Content-Type: application/json" -d '{"groupName": "cdp-users", "syncMembershipOnUserLogin": true}' $ECS_BASE_URL/api/v1/iam/createGroup >/dev/null 2>&1
+  # Assign Roles
+  curl -k -X POST -b $COOKIE_FILE -H "Content-Type: application/json" -d '{"role": "crn:altus:iam:us-west-1:altus:role:PowerUser", "groupName": "cdp-admins"}' $ECS_BASE_URL/api/v1/iam/assignGroupRole >/dev/null 2>&1
+
+  # Get JSON values
+  local LDAP_url=$(jq -r '.ldapProvider.ldapDetails.url' $LDAP_JSON)
+  local LDAP_userSearchBase=$(jq -r '.ldapProvider.ldapDetails.userSearchBase' $LDAP_JSON)
+  local LDAP_userSearchFilter=$(jq -r '.ldapProvider.ldapDetails.userSearchFilter' $LDAP_JSON)
+  local LDAP_groupSearchBase=$(jq -r '.ldapProvider.ldapDetails.groupSearchBase' $LDAP_JSON)
+  local LDAP_groupSearchFilter=$(jq -r '.ldapProvider.ldapDetails.groupSearchFilter' $LDAP_JSON)
+  local LDAP_emailMappingAttribute=$(jq -r '.ldapProvider.ldapDetails.emailMappingAttribute' $LDAP_JSON)
+  local LDAP_bindDn=$(jq -r '.ldapProvider.ldapDetails.bindDn' $LDAP_JSON)
+  local LDAP_tlsCaCertificates="$(cat $ROOT_CA | awk '{printf "%s\\n", $0}')"
+  # Build request JSON
+  cat > $VALIDATE_JSON <<EOF
+{
+  "ldapProviderName": "cm-ldap",
+  "skipGroupSyncOnLogin": false,
+  "url": "$LDAP_url",
+  "userSearchBase": "$LDAP_userSearchBase",
+  "userSearchFilter": "$LDAP_userSearchFilter",
+  "groupSearchBase": "$LDAP_groupSearchBase",
+  "groupSearchFilter": "$LDAP_groupSearchFilter",
+  "syncGroupsOnLogin": true,
+  "emailMappingAttribute": "$LDAP_emailMappingAttribute",
+  "showAdvanced": false,
+  "bindDn": "$LDAP_bindDn",
+  "bindPassword": "",
+  "tlsCaCertificates": [
+    "$LDAP_tlsCaCertificates"
+  ]
+}
+EOF
+
+  # Handle LDAP Certificate validation
+  local return_code=400
+  if jq -e . $VALIDATE_JSON  >/dev/null 2>&1 ; then
+    # Validate LDAP Config
+    return_code=$(curl -k -X POST -b $COOKIE_FILE -H "Content-Type: application/json" -d @$VALIDATE_JSON $ECS_BASE_URL/api/v1/consoleauthenticationcdp/validateLdapConfig 2>/dev/null | jq -r '.code')
+    if [ $return_code == "200" ]; then
+      curl -k -X POST -b $COOKIE_FILE -H "Content-Type: application/json" -d @$VALIDATE_JSON $ECS_BASE_URL/api/v1/iam/updateLdapProvider 2>/dev/null
+      echo "LDAP is configured with IPA Root CA SSL certificate"
+    else
+      echo "ERROR: Can't validate LDAP Config, abort"
+      return 1
+    fi
+  else
+    echo "ERROR: Invalid LDAP Config, abort"
+    return 1
+  fi
+
+  if [[ "${HAS_ECS:-}" == "1" ]]; then
+    log_status "Rebuild default environment on ECS-CP"
+    # Remove ecs environemnt created by express wizard
+    curl -k -X POST -b $COOKIE_FILE -H "Content-Type: application/json" -d '{"envNameOrCrn": "ecs"}' $ECS_BASE_URL/api/v1/compute/deregisterClusters >/dev/null 2>&1
+    curl -k -X POST -b $COOKIE_FILE -H "Content-Type: application/json" -d '{"environmentName": "ecs","cascading": true}' $ECS_BASE_URL/api/v1/environments2/deleteEnvironment >/dev/null 2>&1
+  fi
+  # Build request JSON
+  cat > $ECS_ENV_JSON <<EOF
+{
+    "environmentName": "default",
+    "address": "https://$CLUSTER_HOST:7183",
+    "user": "admin",
+    "authenticationToken": "$THE_PWD",
+    "clusterNames": [
+        "OneNodeCluster"
+    ],
+    "kubeConfig": "$KUBE_CONFIG",
+    "authenticationTokenType": "CLEARTEXT_PASSWORD",
+    "namespacePrefix": "cdp",
+    "domain": "$KUBE_DOMAIN",
+    "dockerConfigJson": "",
+    "description": ""
+}
+EOF
+  # Call createPrivateEnvironment
+  curl -k -X POST -b $COOKIE_FILE -H "Content-Type: application/json" -d @$ECS_ENV_JSON $ECS_BASE_URL/api/v1/environments2/createPrivateEnvironment >/dev/null 2>&1
+  while true; do
+    [[ $(curl -k -X POST -b $COOKIE_FILE -H "Content-Type: application/json" -d '{"environmentName": "default"}' $ECS_BASE_URL/api/v1/environments2/describeEnvironment 2>/dev/null| jq -r '.environment.status') == "AVAILABLE" ]] && break
+    echo "Waiting for environment to be ready.."
+    sleep 10
+  done
+  ECS_ENV_CRN=$(curl -k -X POST -b $COOKIE_FILE -H "Content-Type: application/json" -d '{"environmentName": "default"}' $ECS_BASE_URL/api/v1/environments2/describeEnvironment 2>/dev/null| jq -r '.environment.crn')
+
+  log_status "ECS: Enable NFS for CML"
+
+  NFS_EXT_DIR=""
+  NFS_VER=""
+  NFS_DISK_SIZE="100"
+
+  if [[ "${EXTERNAL_NFS}" == "1" ]]; then
+    log_status "Prepare NFS for CML"
+    enable_nfs
+    NFS_EXT_DIR="${ENDPOINT_HOST}:/nfs/workshop"
+    NFS_VER="4.1"
+    NFS_DISK_SIZE=""
+  fi
+
+  log_status "Provision CML Workspace"
+  # Build request JSON
+  cat > $ECS_CML_JSON <<EOF
+{
+    "environmentName": "default",
+    "workspaceName": "edge2ai",
+    "disableTLS": false,
+    "enableMonitoring": true,
+    "enableGovernance": true,
+    "enableModelMetrics": true,
+    "existingDatabaseConfig": {},
+    "mlGovernancePrincipal": "workshop",
+    "staticSubdomain": "edge2ai",
+    "existingNFS": "$NFS_EXT_DIR",
+    "nfsVersion": "$NFS_VER",
+    "namespace": "edge2ai",
+    "nfsDiskSize": "$NFS_DISK_SIZE",
+    "performCdswMigration": false
+}
+EOF
+  # Call createWorkspace 
+  curl -k -X POST -b $COOKIE_FILE -H "Content-Type: application/json" -d @$ECS_CML_JSON $ECS_BASE_URL/api/v1/ml/createWorkspace 2>/dev/null
+  local tries=99
+  while [[ $tries -ne 0 ]]; do
+    echo "Waiting for CML workspace to be ready.."
+    [[ $(curl -k -X POST -b $COOKIE_FILE -H "Content-Type: application/json" -d '{}' $ECS_BASE_URL/api/v1/ml/listWorkspaces 2>/dev/null | jq -r '.workspaces[] | .instanceStatus') == "installation:finished" ]] && break
+    ((tries--))
+    sleep 10
+  done
+
+  # Get CML URL
+  CML_BASE_URL=$(curl -k -X POST -b $COOKIE_FILE -H "Content-Type: application/json" -d '{}' $ECS_BASE_URL/api/v1/ml/listWorkspaces 2>/dev/null | jq -r '.workspaces[] | .instanceUrl')
+  log_status "CML Workspace URL ${CML_BASE_URL}"
+
+  if [[ $ENABLE_MLREG -eq 1 ]]; then
+    log_status "Setting up Model Registry"
+    # create_ozone_bucket
+    kinit -kt $KEYTABS_DIR/admin.keytab admin
+    ozone sh bucket create s3v/modelregistry
+
+    # get_s3_access
+    get_s3_access=( $(ozone s3 getsecret --om-service-id=ozone) )
+    S3_ACCESS_KEY="${get_s3_access[0]#*=}"
+    S3_SECRET_KEY="${get_s3_access[1]#*=}"
+    OZONE_BUCKET_NAME="modelregistry"
+    
+    cat > $ECS_CML_JSON <<EOF
+{
+    "environmentName": "default",
+    "s3AccessKey": "$S3_ACCESS_KEY",
+    "s3SecretKey": "$S3_SECRET_KEY",
+    "s3Bucket": "$OZONE_BUCKET_NAME",
+    "s3Endpoint": "https://$CLUSTER_HOST:9879",
+    "environmentCrn": "$ECS_ENV_CRN"
+}
+EOF
+    # Call createModelRegistry 
+    curl -k -X POST -b $COOKIE_FILE -H "Content-Type: application/json" -d @$ECS_CML_JSON $ECS_BASE_URL/api/v1/ml/createModelRegistry 2>/dev/null
+    local tries=99
+    while [[ $tries -ne 0 ]]; do
+      echo "Waiting for Model Registry to be ready.."
+      [[ $(curl -k -X POST -b $COOKIE_FILE -H "Content-Type: application/json" -d '{}' $ECS_BASE_URL/api/v1/ml/listModelRegistries 2>/dev/null | jq -r '.modelRegistries[] | .status') == "INSTALLED" ]] && break
+      ((tries--))
+      sleep 10
+    done
+    # Get Workspace CRN
+    WORKSPACE_CRN=$(curl -k -X POST -b $COOKIE_FILE -H "Content-Type: application/json" -d '{}' $ECS_BASE_URL/api/v1/ml/listWorkspaces 2>/dev/null | jq -r '.workspaces[] | .crn')
+    # Refresh Edge2AI workspace
+    curl -k -X POST -b $COOKIE_FILE -H "Content-Type: application/json" -d '{"workspaceCrn": "'"$WORKSPACE_CRN"'"}' $ECS_BASE_URL/api/v1/ml/refreshModelRegistryConfigmap 2>/dev/null
+  fi
+  log_status "CML Workspace provisioned successfully"
+}
+
+function enable_nfs() {
+  yum_install nfs-utils
+  mkdir /nfs/workshop -p
+  chown 8536:8536 /nfs/workshop
+  chmod g+srwx /nfs/workshop
+  echo "/nfs/workshop  *(rw,sync,no_root_squash,no_all_squash,no_subtree_check)" | tee -a /etc/exports
+  systemctl enable nfs-server
+  systemctl start nfs-server
+  if firewall-cmd --state >/dev/null 2>&1; then
+    firewall-cmd --permanent --add-service=nfs
+    firewall-cmd --permanent --add-service=mountd
+    firewall-cmd --permanent --add-service=rpc-bind
+    firewall-cmd --reload
+    echo "firewall-cmd is running"
+  else
+    echo "SKIPPED: firewall-cmd is not running or not installed"
+  fi
+}
+
+# ocp-block
+function oc_login() {
+  local api_url="${1}"
+  wget https://mirror.openshift.com/pub/openshift-v4/clients/ocp/latest/openshift-client-linux.tar.gz -O /tmp/openshift-client-linux.tar.gz
+  tar xvf /tmp/openshift-client-linux.tar.gz -C /usr/local/bin
+  local retries=100
+  while [[ $retries -gt 0 ]]; do
+    set +e
+    /usr/local/bin/oc login -u kubeadmin -p $THE_PWD -s $api_url
+    err=$?
+    set -e
+    if [[ $err == 0 ]]; then
+      break
+    fi
+    retries=$((retries - 1))
+    sleep 10
+    echo "Waiting for OpenShift cluster on $api_url to be ready (retries left: $retries)"
+  done
+}
+
+function install_ocp() {
+  CURL=(curl -s -u "admin:${THE_PWD}" -H "accept: application/json" -H "Content-Type: application/json")
+  log_status "Connect to OCP API"
+  KUBE_DOMAIN="${OCP_PUBLIC_DNS}"
+  API_OCP_ENDPOINT="api.${OCP_PUBLIC_DNS}"
+  oc_login $API_OCP_ENDPOINT
+  KUBE_CONFIG="$(sed ':a;N;$!ba;s/\n/\\n/g' ~/.kube/config)"
+
+  log_status "Initialize OCP"
+  local ocp_json_file=${BASE_DIR}/ocp_install.json
+  cat > $ocp_json_file <<EOF
+{
+  "kubernetesType": "openshift",
+  "remoteRepoUrl": "${ECS_REPO}",
+  "valuesYaml": "ContainerInfo:\n  Mode: public\nDatabase:\n  Mode: embedded\n  EmbeddedDbStorage: 20\nServices:\n  thunderheadenvironment:\n    Config:\n      database:\n        name: db-env\n  mlxcontrolplaneapp:\n    Config:\n      database:\n        name: db-mlx\n  dwx:\n    Config:\n      database:\n        name: db-dwx\n  cpxliftie:\n    Config:\n      database:\n        name: db-liftie\n  dex:\n    Config:\n      database:\n        name: db-dex\n  resourcepoolmanager:\n    Config:\n      database:\n        name: db-resourcepoolmanager\n  cdpcadence:\n    Config:\n      database:\n        name: db-cadence\n  cdpcadencevisibility:\n    Config:\n      database:\n        name: db-cadence-visibility\n  clusteraccessmanager:\n    Config:\n      database:\n        name: db-clusteraccessmanager\n  monitoringapp:\n    Config:\n      database:\n        name: db-alerts\n  thunderheadusermanagementprivate:\n    Config:\n      database:\n        name: db-ums\n  classicclusters:\n    Config:\n      database:\n        name: cm-registration\n  clusterproxy:\n    Config:\n      database:\n        name: cluster-proxy\n  dssapp:\n    Config:\n      database:\n        name: db-dss-app\nOptionalCerts:\n  MiscCaCerts: ''\nVault:\n  Mode: embedded\n  EmbeddedStorage: 2\nStorage:\n  StorageClass: ''",
+  "kubeConfig": "${KUBE_CONFIG}",
+  "namespace": "cdp",
+  "isOverrideAllowed": true
+}
+EOF
+
+  log_status "Start Control Plane installation"
+  local ocp_call_log=/tmp/ocp-call.$(date +%s).log
+  "${CURL[@]}" -X POST \
+    -H "Referer: https://${CLUSTER_HOST}:7183/cmf/express-wizard/wizard?allowResume=false&clusterType=EXPERIENCE_CLUSTER" \
+    "https://${CLUSTER_HOST}:7183/api/v44/controlPlanes/commands/installControlPlane" \
+    -d @$ocp_json_file | tee $ocp_call_log
+  local job_id=$(jq '.id' $ocp_call_log)
+
+  while true; do
+    [[ $(curl -s -k -L -u admin:"${THE_PWD}" "$(get_cm_base_url)/api/v19/commands/$job_id" | jq -r '.active') == "false" ]] && break
+    echo "Waiting for OCP setup to finish"
+    # ECS setup takes up to 15 minutes, sleep for 30 seconds
+    sleep 30
+  done
+
+  log_status "OCP Cluster is ready"
 }
